Fixed text size and alignment

--- a/src/src/routes/Account/MyDeliveries/OrdersList/OrderSkipRecovery/Offer/Offer.css
+++ b/src/src/routes/Account/MyDeliveries/OrdersList/OrderSkipRecovery/Offer/Offer.css
@@ -9,8 +9,9 @@
 
 .discountOSR {
   display: flex;
-  flex-shrink: 0;
+  justify-content: center;
   align-items: center;
+  flex-shrink: 0;
   height: 78.44px;
   width: 78.77px;
   border: 1.44px solid #01A92B;
@@ -23,13 +24,16 @@
 .discountOSR div {
   font-family: comfortaaFontStack;
   color: White;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: bold;
+  max-width: 60px;
+}
+
+.discountOSR div small {
+  font-size: 70%;
 }
 
 .messageDiscountOSR {
-  height: 63px;
-  width: 217px;
   color: Haricot;
   font-family: Avenir;
   font-size: 16px;
